--- a/src/App.css
+++ b/src/App.css
@@ -65,26 +65,26 @@ main {
   .hover-shadow:hover {
     filter: drop-shadow(0px 0px 5px rgba(141, 141, 141, 0.616)) brightness(1.1);
   }
-  ::-webkit-scrollbar {
+  html::-webkit-scrollbar {
     width: 8px;
   }
 
-  ::-webkit-scrollbar-track {
+  html::-webkit-scrollbar-track {
     background: #181818;
   }
 
-  ::-webkit-scrollbar-thumb {
+  html::-webkit-scrollbar-thumb {
     background: #474747;
     border-radius: 5px;
     opacity: 0;
   }
 
-  ::-webkit-scrollbar-thumb:hover {
+  html::-webkit-scrollbar-thumb:hover {
     background: rgb(82, 82, 82);
     opacity: 0;
   }
 
-  ::-webkit-scrollbar-thumb:active {
+  html::-webkit-scrollbar-thumb:active {
     background: rgb(114, 114, 114);
   }
 }
