--- a/src/Shared/FirstNavbar/Components/FirstNavLinks/FirstNavLinks.module.css
+++ b/src/Shared/FirstNavbar/Components/FirstNavLinks/FirstNavLinks.module.css
@@ -1,71 +1,71 @@
 .FirstNavLinks {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    list-style: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
 }
 .FirstNavLinks a {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    color: rgba(255, 255, 255, 0.5);
-    text-decoration: none;
-    transition: color 200ms;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  color: rgba(255, 255, 255, 0.5);
+  text-decoration: none;
+  transition: color 200ms;
 }
 
 #active {
-    cursor: default;
+  cursor: default;
 }
 
 #active a {
-    color: #fff;
-    pointer-events: none;
+  color: #fff;
+  pointer-events: none;
 }
 #active::after {
-    bottom: 0px;
-    background-color: rgba(255, 255, 255);
+  bottom: 0px;
+  background-color: rgba(255, 255, 255);
 }
 .navOption {
-    cursor: pointer;
-    height: 100%;
-    width: 100%;
-    position: relative;
-    overflow: hidden;
+  cursor: pointer;
+  height: 100%;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
 }
 .navOption a {
-    padding: 0 1rem;
-    transition: color 200ms;
+  padding: 0 1rem;
+  transition: color 200ms;
 }
 
 .navOption::after {
-    content: '';
-    background-color: rgba(255, 255, 255, 0.8);
-    width: 100%;
-    height: 5px;
-    left: 0;
-    bottom: -5px;
-    transition: bottom 200ms;
-    position: absolute;
+  content: '';
+  background-color: rgba(255, 255, 255, 0.8);
+  width: 100%;
+  height: 5px;
+  left: 0;
+  bottom: -5px;
+  transition: bottom 200ms;
+  position: absolute;
 }
 .navOption:hover a {
-    color: rgba(255, 255, 255, 0.8);
+  color: rgba(255, 255, 255, 0.8);
 }
 .navOption:hover::after {
-    bottom: 0px;
-    background-color: rgba(255, 255, 255, 0.8);
+  bottom: 0px;
+  background-color: rgb(255, 255, 255);
 }
 @media only screen and (max-width: 768px) {
-    .FirstNavLinks {
-        display: flex;
-        z-index: 1;
-        flex-direction: column;
-    }
-    .navOption::after {
-        content: none;
-    }
-    .navOption {
-        padding: 0;
-        margin-top: 1rem;
-    }
+  .FirstNavLinks {
+    display: flex;
+    z-index: 1;
+    flex-direction: column;
+  }
+  .navOption::after {
+    content: none;
+  }
+  .navOption {
+    padding: 0;
+    margin-top: 1rem;
+  }
 }
