--- a/src/Pages/IndividualGame/Components/IndividualGameDetails/Components/IndividualGameReviewSection/Components/IndividualGameTakeReview/Components/IndividualGameWriteReview/Components/IndividualGameReviewBtn/IndividualGameReviewBtn.module.css
+++ b/src/Pages/IndividualGame/Components/IndividualGameDetails/Components/IndividualGameReviewSection/Components/IndividualGameTakeReview/Components/IndividualGameWriteReview/Components/IndividualGameReviewBtn/IndividualGameReviewBtn.module.css
@@ -3,6 +3,7 @@
   right: 0;
   bottom: 0;
 }
+
 .submitBtn {
   background-color: rgb(14, 101, 182);
   color: #ebebeb;
@@ -10,24 +11,38 @@
   border: none;
   border-radius: 3px;
   margin-left: 10px;
+  cursor: pointer;
+  transition: background-color 200ms;
 }
+
 .submitBtn:hover {
   background-color: rgb(15, 109, 197);
 }
+
 .submitBtn:active {
   background-color: rgb(15, 121, 221);
 }
+
 .closeBtn {
   background-color: rgb(187, 187, 187);
   color: #000000;
   padding: 8px;
   border: none;
   border-radius: 3px;
+  transition: background-color 200ms, color 200ms;
+  cursor: pointer;
 }
+
 .closeBtn:hover {
   background-color: rgb(24, 24, 24);
   color: #acacac;
 }
+
 .closeBtn:active {
   background-color: rgb(32, 32, 32);
+  color: #acacac;
+}
+
+.cantSubmit:active {
+  background-color: rgb(211, 27, 27);
 }
