--- a/src/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItem/DiscoverBannerItem.module.css
+++ b/src/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItem/DiscoverBannerItem.module.css
@@ -1,116 +1,114 @@
 .carouselItem {
-    width: 75vw;
-    max-width: 1600px;
-    position: absolute;
-    visibility: hidden;
-    border-radius: 5px;
+  width: 75vw;
+  max-width: 1600px;
+  position: absolute;
+  visibility: hidden;
+  border-radius: 5px;
 }
 
 .itemHide {
-    z-index: 0;
-    opacity: 0;
-    visibility: hidden;
+  z-index: 0;
+  opacity: 0;
+  visibility: hidden;
 }
 
 .carouselImg {
-    width: 100%;
-    aspect-ratio: 1.77777778/1;
-    border-radius: 5px;
+  width: 100%;
+  aspect-ratio: 1.77777778/1;
+  border-radius: 5px;
 }
 
 .itemButton {
-    position: absolute;
-    bottom: 30%;
-    left: 2%;
+  position: absolute;
+  bottom: 30%;
+  left: 2%;
 }
 
 .itemButton button:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .itemButton button {
-    border: none;
-    font-size: 1vw;
-    padding: 15% 15%;
-    width: 8vw;
-    max-width: 10rem;
-    text-transform: uppercase;
-    border-radius: 5px;
+  border: none;
+  font-size: 1vw;
+  padding: 15% 15%;
+  width: 8vw;
+  max-width: 10rem;
+  text-transform: uppercase;
+  border-radius: 5px;
 }
 
 #initialBanner {
-    opacity: 1;
-    z-index: 1;
-    visibility: visible;
+  opacity: 1;
+  z-index: 1;
+  visibility: visible;
 }
 
 #bannerFadeIn {
-    opacity: 0;
-    z-index: 1;
-    visibility: visible;
-    animation: 200ms cubic-bezier(0.17, 0.17, 0.23, 1) 200ms 1 normal forwards
-        running fadeIn;
+  opacity: 0;
+  z-index: 1;
+  visibility: visible;
+  animation: 200ms cubic-bezier(0.17, 0.17, 0.23, 1) 200ms 1 normal forwards running fadeIn;
 }
 
 #bannerFadeOut {
-    opacity: 0;
-    visibility: hidden;
-    animation: 300ms cubic-bezier(0.69, 0, 0.83, 0.83) 0s 1 normal forwards
-        running fadeout;
+  opacity: 0;
+  visibility: hidden;
+  animation: 300ms cubic-bezier(0.69, 0, 0.83, 0.83) 0s 1 normal forwards running fadeout;
 }
 
 @keyframes fadeout {
-    0% {
-        transform: translateX(0);
-        opacity: 1;
-        visibility: visible;
-    }
+  0% {
+    transform: translateX(0);
+    opacity: 1;
+    visibility: visible;
+  }
 
-    25% {
-        opacity: 1;
-        visibility: visible;
-    }
+  25% {
+    opacity: 1;
+    visibility: visible;
+  }
 
-    100% {
-        transform: translateX(-100px);
-        opacity: 0;
-        visibility: hidden;
-    }
+  100% {
+    transform: translateX(-100px);
+    opacity: 0;
+    visibility: hidden;
+  }
 }
 
 @keyframes fadeIn {
-    0% {
-        opacity: 0;
-        transform: translateX(100px);
-    }
+  0% {
+    opacity: 0;
+    transform: translateX(100px);
+  }
 
-    75% {
-        opacity: 1;
-        visibility: visible;
-    }
+  75% {
+    opacity: 1;
+    visibility: visible;
+  }
 
-    100% {
-        transform: translateX(0);
-        opacity: 1;
-        visibility: visible;
-    }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+    visibility: visible;
+  }
 }
 
 @media only screen and (min-width: 2134px) {
-    .itemButton button {
-        font-size: 1rem;
-    }
+  .itemButton button {
+    font-size: 1rem;
+  }
 }
 
 @media only screen and (max-width: 1023px) and (min-width: 766px) {
-    .carouselItem {
-        width: 97vw;
-        aspect-ratio: 1.77777778/1;
-    }
+  .carouselItem {
+    width: 97vw;
+    aspect-ratio: 1.77777778/1;
+  }
 
-    .carouselImg {
-        width: 100%;
-        aspect-ratio: 1.77777778/1;
-        border-radius: 5px;
-    }
+  .carouselImg {
+    width: 100%;
+    aspect-ratio: 1.77777778/1;
+    border-radius: 5px;
+  }
 }
