--- a/src/Pages/IndividualGame/Components/IndividualGameDetails/Components/IndividualGameReviewSection/Components/IndividualGameTakeReview/Components/IndividualGameWriteReview/Components/IndividualGameReviewInputField/IndividualGameReviewInputField.module.css
+++ b/src/Pages/IndividualGame/Components/IndividualGameDetails/Components/IndividualGameReviewSection/Components/IndividualGameTakeReview/Components/IndividualGameWriteReview/Components/IndividualGameReviewInputField/IndividualGameReviewInputField.module.css
@@ -11,7 +11,7 @@
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.678);
   border-radius: 3px;
   background-color: #181818;
-  color: #ffffff;
+  color: #b1b1b1;
 }
 .reviewTitle:focus {
   outline: none;
@@ -22,6 +22,7 @@
   font-size: x-small;
   bottom: 6px;
   right: 4px;
+  user-select: none;
 }
 
 .warning {
