--- a/src/Pages/IndividualGame/Components/IndividualGameDetails/Components/IndividualGameReviewSection/Components/IndividualGameTakeReview/Components/IndividualGameWriteReview/Components/IndividualGameReviewTextField/IndividualGameReviewTextField.module.css
+++ b/src/Pages/IndividualGame/Components/IndividualGameDetails/Components/IndividualGameReviewSection/Components/IndividualGameTakeReview/Components/IndividualGameWriteReview/Components/IndividualGameReviewTextField/IndividualGameReviewTextField.module.css
@@ -10,7 +10,7 @@
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.678);
   border-radius: 3px;
   background-color: #181818;
-  color: #ffffff;
+  color: #b1b1b1;
 }
 .description:focus {
   outline: none;
@@ -21,6 +21,7 @@
   font-size: x-small;
   bottom: 10px;
   right: 12px;
+  user-select: none;
 }
 
 .warning {
