--- a/src/Pages/IndividualGame/Components/IndividualGameDetails/Components/IndividualGameReviewSection/Components/IndividualGameTakeReview/IndividualGameTakeReview/IndividualGameTakeReview.module.css
+++ b/src/Pages/IndividualGame/Components/IndividualGameDetails/Components/IndividualGameReviewSection/Components/IndividualGameTakeReview/IndividualGameTakeReview/IndividualGameTakeReview.module.css
@@ -10,10 +10,11 @@
   margin-right: 10px;
   width: 40px;
   height: 40px;
+  border-radius: 50%;
 }
 .addReviewButton {
   background: none;
-  color: #c9c9c9;
+  color: #696969;
   border: none;
   margin-top: 10px;
   font-size: 16px;
@@ -25,26 +26,25 @@
   color: #aaa;
 }
 .addReviewButton:disabled {
-  color: #aaa;
+  color: #555555;
   cursor: default;
 }
 .overAllRatingContainer {
   display: flex;
   align-items: center;
+  color: #919191;
 }
 .overAllRating {
   font-size: 40px;
+}
+
+.overallRatingText {
+  color: #919191;
+  font-size: large;
 }
 
 .fullStar {
   width: 30px;
   height: 30px;
   margin-right: 10px;
-}
-.line {
-  width: 100%;
-  height: 1px;
-  background: rgba(255, 255, 255, 0.1);
-  margin-top: 20px;
-  margin-bottom: 20px;
 }
