--- a/src/Pages/IndividualGame/Components/IndividualGameDetails/Components/IndividualGameReviewSection/Components/IndividualGameTakeReview/Components/IndividualGameWriteReview/Components/IndividualGameReviewBtn/IndividualGameReviewBtn.module.css
+++ b/src/Pages/IndividualGame/Components/IndividualGameDetails/Components/IndividualGameReviewSection/Components/IndividualGameTakeReview/Components/IndividualGameWriteReview/Components/IndividualGameReviewBtn/IndividualGameReviewBtn.module.css
@@ -46,3 +46,15 @@
 .cantSubmit:active {
   background-color: rgb(211, 27, 27);
 }
+
+@media only screen and (max-width: 265px) {
+  .IndividualGameReviewButtons {
+    left: 0;
+    bottom: 0;
+  }
+  .submitBtn {
+    display: block;
+    margin-top: 10px;
+    margin-left: 0;
+  }
+}
