--- a/src/Pages/IndividualGame/Components/IndividualGameDetails/Components/IndividualGameReviewSection/Components/IndividualGameTakeReview/IndividualGameTakeReview/IndividualGameTakeReview.module.css
+++ b/src/Pages/IndividualGame/Components/IndividualGameDetails/Components/IndividualGameReviewSection/Components/IndividualGameTakeReview/IndividualGameTakeReview/IndividualGameTakeReview.module.css
@@ -48,3 +48,9 @@
   height: 30px;
   margin-right: 10px;
 }
+@media only screen and (max-width: 376px) {
+  .individualGameTakeReview {
+    flex-direction: column;
+    align-items: center;
+  }
+}
