--- a/src/Shared/SecondNavbar/Components/SecondNavSearchField/SecondNavSearchField.module.css
+++ b/src/Shared/SecondNavbar/Components/SecondNavSearchField/SecondNavSearchField.module.css
@@ -1,75 +1,76 @@
 .searchField {
-    background-color: rgb(44, 44, 44);
-    display: flex;
-    align-items: center;
-    border-radius: 1.5rem;
-    padding: 0px 10px;
-    max-width: 250px;
-    transition: background-color 300ms;
-    height: 40px;
-    z-index: 1;
+  background-color: rgb(44, 44, 44);
+  display: flex;
+  align-items: center;
+  border-radius: 1.5rem;
+  padding: 0px 10px;
+  max-width: 250px;
+  transition: background-color 300ms;
+  height: 40px;
+  z-index: 1;
 }
 #show #searchIcon {
-    fill: rgb(0, 0, 0);
+  fill: rgb(0, 0, 0);
 }
 .searchField input {
-    background-color: rgb(44, 44, 44);
-    border: none;
-    font-size: 1rem;
-    width: 100%;
-    color: rgba(255, 255, 255, 0.5);
-    transition: background-color 300ms, color 300ms;
+  background-color: rgb(44, 44, 44);
+  border: none;
+  font-size: 1rem;
+  width: 100%;
+  color: rgba(255, 255, 255, 0.5);
+  padding-left: 5px;
+  transition: background-color 300ms, color 300ms;
 }
 .searchField input::placeholder {
-    color: rgb(255, 255, 255, 0.5);
-    transition: color 300ms;
+  color: rgb(255, 255, 255, 0.5);
+  transition: color 300ms;
 }
 .searchField input {
-    outline: 0;
+  outline: 0;
 }
 #show input {
-    outline: 0;
-    background-color: rgb(255, 255, 255);
-    color: #000;
-    border: none;
+  outline: 0;
+  background-color: rgb(255, 255, 255);
+  color: #000;
+  border: none;
 }
 
 #show input::placeholder {
-    color: rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 0.5);
 }
 #show {
-    background-color: rgb(255, 255, 255);
+  background-color: rgb(255, 255, 255);
 }
 
 #searchIcon {
-    width: 25px;
-    height: 30px;
-    display: flex;
-    align-items: center;
-    aspect-ratio: 1/1;
-    fill: rgb(255, 255, 255, 0.5);
-    transition: fill 300ms;
+  width: 25px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  aspect-ratio: 1/1;
+  fill: rgb(255, 255, 255, 0.5);
+  transition: fill 300ms;
 }
 
 @media only screen and (max-width: 768px) {
-    .searchField {
-        background-color: transparent;
-        max-width: none;
-        position: absolute;
-        left: -10px;
-        margin-left: 10px;
-        transition: all 300ms;
-        z-index: 2;
-    }
-    #show {
-        padding: 0 10px;
-        width: 100%;
-        background-color: white;
-        position: absolute;
-        border-radius: 0;
-        z-index: 3;
-    }
-    #hide {
-        width: 25px;
-    }
+  .searchField {
+    background-color: transparent;
+    max-width: none;
+    position: absolute;
+    left: -10px;
+    margin-left: 10px;
+    transition: all 300ms;
+    z-index: 2;
+  }
+  #show {
+    padding: 0 10px;
+    width: 100%;
+    background-color: white;
+    position: absolute;
+    border-radius: 0;
+    z-index: 3;
+  }
+  #hide {
+    width: 25px;
+  }
 }
