--- a/src/MainContent/MainContent.module.css
+++ b/src/MainContent/MainContent.module.css
@@ -1,19 +1,19 @@
-.browse {
+.main {
   width: 75vw;
   max-width: 1600px;
-}
-.mainContent {
   display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media (max-width: 1023px) and (min-width: 766px) {
-  .browse {
+  .main {
     width: 97vw;
   }
 }
 
 @media only screen and (max-width: 768px) {
-  .browse {
+  .main {
     width: 98vw;
   }
 }
