--- a/src/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItem/DiscoverBannerItem.module.css
+++ b/src/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItem/DiscoverBannerItem.module.css
@@ -102,7 +102,7 @@
 
 @media only screen and (max-width: 1023px) and (min-width: 766px) {
   .carouselItem {
-    width: 97vw;
+    width: 100%;
     aspect-ratio: 1.77777778/1;
   }
 
