--- a/src/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItems/DiscoverBannerItems.module.css
+++ b/src/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItems/DiscoverBannerItems.module.css
@@ -1,14 +1,6 @@
 .carouselItems {
-  width: 75vw;
+  width: 100%;
   aspect-ratio: 1.77777778/1;
-  max-width: 1600px;
   display: flex;
   justify-content: center;
-}
-
-@media only screen and (max-width: 1023px) and (min-width: 766px) {
-  .carouselItems {
-    width: 97vw;
-    aspect-ratio: 1.77777778/1;
-  }
 }
