--- a/src/Pages/Discover/Components/EventGames/Components/EventGamesGamesColumn/EventGamesGamesColumn.module.css
+++ b/src/Pages/Discover/Components/EventGames/Components/EventGamesGamesColumn/EventGamesGamesColumn.module.css
@@ -1,44 +1,45 @@
 .GameColumn {
-    width: 32.5%;
-    transition: opacity 200ms;
+  width: 32.5%;
+  transition: opacity 200ms;
 }
 .rightBorder {
-    border-right: 1px solid rgba(148, 148, 148, 0.486);
+  border-right: 1px solid rgba(148, 148, 148, 0.486);
 }
 .column {
-    padding: 10px;
-    list-style: none;
+  padding: 10px;
+  list-style: none;
 }
 .heading {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-right: 1rem;
-    margin-bottom: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-right: 1rem;
+  margin-bottom: 2rem;
 }
 .heading button {
-    border: 1px solid rgba(156, 156, 156, 0.6);
-    background-color: black;
-    color: white;
-    border-radius: 5px;
-    padding: 0.5rem 1rem;
-    cursor: pointer;
-    transition: box-shadow 300ms;
+  border: 1px solid rgba(156, 156, 156, 0.6);
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  transition: box-shadow 300ms;
+  margin-right: 10px;
 }
 .heading button:hover {
-    box-shadow: 0 0 10px 0px grey;
+  box-shadow: 0 0 10px 0px grey;
 }
 .heading h2 {
-    font-size: 1rem;
+  font-size: 1rem;
 }
 @media only screen and (max-width: 768px) {
-    .Opacity0 {
-        opacity: 0;
-    }
-    .GameColumn {
-        flex-shrink: 0;
-    }
-    .rightBorder {
-        border-right: none;
-    }
+  .Opacity0 {
+    opacity: 0;
+  }
+  .GameColumn {
+    flex-shrink: 0;
+  }
+  .rightBorder {
+    border-right: none;
+  }
 }
