--- a/src/Pages/Discover/Components/ExploreGames/ExploreGames.module.css
+++ b/src/Pages/Discover/Components/ExploreGames/ExploreGames.module.css
@@ -1,87 +1,94 @@
 .ExploreGames {
-    width: 100%;
-    aspect-ratio: 4/3;
-    margin-bottom: 3rem;
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-origin: border-box;
-    clip-path: polygon(0 30%, 100% 0, 100% 70%, 0 100%);
-    display: flex;
-    align-items: center;
+  width: 100%;
 }
+
+.exploreGamesBackground {
+  width: 100%;
+  aspect-ratio: 4/3;
+  margin-bottom: 3rem;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-origin: border-box;
+  clip-path: polygon(0 30%, 100% 0, 100% 70%, 0 100%);
+  display: flex;
+  align-items: center;
+  position: absolute;
+  left: 0;
+}
+
 .ExploreTexts {
-    position: relative;
-    width: 20%;
-    left: 20%;
+  position: relative;
+  width: 20%;
+  left: 20%;
 }
 .ExploreTexts h4 {
-    font-size: 16px;
+  font-size: 16px;
 }
 .ExploreTexts p {
-    margin: 1rem 0;
-    font-size: 14px;
+  margin: 1rem 0;
+  font-size: 14px;
 }
 
 .ExploreTexts a {
-    padding: 1rem 2rem;
-    border-radius: 5px;
-    margin-top: 1rem;
-    display: inline-block;
-    text-decoration: none;
-    color: black;
-    cursor: pointer;
-    transition: all 300ms;
-    background-color: white;
-    border: 1px solid white;
-    font-size: 14px;
+  padding: 1rem 2rem;
+  border-radius: 5px;
+  margin-top: 1rem;
+  display: inline-block;
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+  transition: all 300ms;
+  background-color: white;
+  border: 1px solid white;
+  font-size: 14px;
 }
 .ExploreTexts a:hover {
-    background-color: rgba(0, 0, 0, 0.4);
-    color: white;
-    border: 1px solid white;
+  background-color: rgba(0, 0, 0, 0.4);
+  color: white;
+  border: 1px solid white;
 }
 .ExploreTexts a:active {
-    background-color: rgb(78, 78, 78);
+  background-color: rgb(78, 78, 78);
 }
 @media only screen and (max-width: 1024px) and (min-width: 357px) {
-    .ExploreGames {
-        clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
-    }
-    .ExploreTexts {
-        width: 45%;
-    }
+  .ExploreGames {
+    clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
+  }
+  .ExploreTexts {
+    width: 45%;
+  }
 }
 @media only screen and (max-width: 768px) {
-    .ExploreTexts h4 {
-        font-size: 14px;
-    }
-    .ExploreTexts p,
-    .ExploreTexts a {
-        font-size: 12px;
-    }
-    .ExploreGames {
-        aspect-ratio: 1/1;
-    }
+  .ExploreTexts h4 {
+    font-size: 14px;
+  }
+  .ExploreTexts p,
+  .ExploreTexts a {
+    font-size: 12px;
+  }
+  .ExploreGames {
+    aspect-ratio: 1/1;
+  }
 }
 @media only screen and (max-width: 355px) {
-    .ExploreGames {
-        clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
-    }
-    .ExploreTexts {
-        width: 55%;
-    }
+  .ExploreGames {
+    clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
+  }
+  .ExploreTexts {
+    width: 55%;
+  }
 }
 @media only screen and (min-width: 2134px) {
-    .ExploreGames {
-        aspect-ratio: 5/3;
-    }
-    .ExploreTexts h4 {
-        font-size: 18px;
-    }
-    .ExploreTexts p,
-    .ExploreTexts a {
-        font-size: 16px;
-    }
+  .ExploreGames {
+    aspect-ratio: 5/3;
+  }
+  .ExploreTexts h4 {
+    font-size: 18px;
+  }
+  .ExploreTexts p,
+  .ExploreTexts a {
+    font-size: 16px;
+  }
 }
