--- a/src/Pages/AddGame/Components/AddGameDetails/AddGameDetails.module.css
+++ b/src/Pages/AddGame/Components/AddGameDetails/AddGameDetails.module.css
@@ -9,3 +9,13 @@
 .field:last-child {
   margin-left: 10px;
 }
+
+@media screen and (max-width: 1023px) {
+  .textFieldContainer {
+    display: block;
+  }
+  .field:last-child {
+    margin-left: 0px;
+    margin-top: 10px;
+  }
+}
