--- a/src/Pages/AddGame/Components/AddGameTags/AddGameTags/AddGameTags.module.css
+++ b/src/Pages/AddGame/Components/AddGameTags/AddGameTags/AddGameTags.module.css
@@ -1,4 +1,4 @@
-.addGamesDetailsInfo {
+.addGameTags {
   width: 100%;
 }
 .optionsContainer {
@@ -11,6 +11,22 @@
 }
 .options:last-child {
   margin-left: 40px;
+}
+
+.header {
+  font-size: 1.3rem;
+}
+
+@media only screen and (max-width: 1023px) and (min-width: 769px) {
+  .header {
+    font-size: 1.2rem;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .header {
+    font-size: 1rem;
+  }
 }
 
 @media screen and (max-width: 768px) {
