--- a/src/Pages/MainContent/Pages/Browse/Components/FilterGames/Components/ApplyButton/ApplyButton.module.css
+++ b/src/Pages/MainContent/Pages/Browse/Components/FilterGames/Components/ApplyButton/ApplyButton.module.css
@@ -8,7 +8,7 @@
   padding: 10px 15px;
   outline: none;
   color: rgb(146, 146, 146);
-  background: #111;
+  background: transparent;
   position: relative;
   z-index: 0;
   border-radius: 0px;
