--- a/src/Shared/FileUploadButton/FileUploadButton.module.css
+++ b/src/Shared/FileUploadButton/FileUploadButton.module.css
@@ -1,11 +1,48 @@
-.container {
+.fileUploadField {
+  display: none;
+}
+
+.fileUploadButton {
   width: 100%;
+  height: 100%;
+  border: none;
+  padding: 20px 40px 20px 10px;
+  text-align: left;
   position: relative;
   background-color: rgba(255, 255, 255, 0.05);
-  height: 100%;
   border-radius: 4px;
+  cursor: pointer;
   overflow: hidden;
+  transition: background-color 0.2s ease;
 }
+
+.fileUploadButton:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.fileName {
+  opacity: 0;
+  font-size: medium;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: rgb(173, 173, 173);
+}
+
+.uploadImage {
+  height: 20px;
+  position: absolute;
+  right: 10px;
+}
+
+.uploadImage img {
+  height: 100%;
+}
+
+.selected {
+  opacity: 1;
+}
+
 .label {
   width: 100%;
   position: absolute;
@@ -13,19 +50,10 @@
   translate: 0 -50%;
   left: 0px;
   padding: 0 10px;
+  font-size: medium;
   pointer-events: none;
   color: rgb(173, 173, 173);
   transition: top 0.2s ease, font-size 0.2s ease, translate 0.2s ease, color 0.2s ease;
-}
-.field {
-  width: 100%;
-  outline: none;
-  font-size: medium;
-  background: transparent;
-  padding: 25px 10px 15px 10px;
-  color: rgb(173, 173, 173);
-  border: none;
-  user-select: none;
 }
 
 .focused {
@@ -35,17 +63,13 @@
   color: rgb(140, 140, 140);
 }
 
-.textarea {
-  resize: vertical;
-  min-height: 150px;
-  overflow: hidden;
-}
 @media screen and (max-width: 768px) {
   .label {
     font-size: 12px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    width: 85%;
   }
   .field {
     font-size: 12px;
