--- a/src/Shared/FileUploadButton/FileUploadButton.module.css
+++ b/src/Shared/FileUploadButton/FileUploadButton.module.css
@@ -15,9 +15,15 @@
   overflow: hidden;
   transition: background-color 0.2s ease;
 }
+.fileUploadButton:disabled {
+  cursor: default;
+}
 
 .fileUploadButton:hover {
   background-color: rgba(255, 255, 255, 0.1);
+}
+.fileUploadButton:hover:disabled {
+  background-color: rgba(255, 255, 255, 0.05);
 }
 
 .fileName {
