--- a/src/Shared/FilterOption/FilterSwitch/FilterSwitch.module.css
+++ b/src/Shared/FilterOption/FilterSwitch/FilterSwitch.module.css
@@ -1,9 +1,19 @@
+.toggleButtonContainer {
+  width: calc(100% + 30px);
+  height: 22px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
 .toggleButton {
-  width: 100%;
+  width: calc(100% - 30px);
   height: 18px;
   border-radius: 15px;
   background-color: rgb(58, 58, 58);
   box-shadow: inset 0 0 2px 0px rgba(0, 0, 0, 0.8);
+  position: relative;
   user-select: none;
 }
 .roundContainer {
