--- a/src/Shared/FilterOption/FilterOption/FilterOption.module.css
+++ b/src/Shared/FilterOption/FilterOption/FilterOption.module.css
@@ -2,6 +2,7 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   cursor: pointer;
   position: relative;
   margin: 20px 0;
@@ -17,7 +18,7 @@
 
 .toggleButtonContainer {
   position: absolute;
-  right: 12px;
+  right: 28px;
   width: 36px;
 }
 
