--- a/src/Shared/FirstNavbar/FirstNavBar/FirstNavbar.module.css
+++ b/src/Shared/FirstNavbar/FirstNavBar/FirstNavbar.module.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: stretch;
   width: 100%;
+  height: 100%;
   background-color: #222222;
   position: relative;
   z-index: 6;
