--- a/src/Pages/AddGame/Components/AddGameTags/Components/PriceReleaseDate/PriceReleaseDate.module.css
+++ b/src/Pages/AddGame/Components/AddGameTags/Components/PriceReleaseDate/PriceReleaseDate.module.css
@@ -9,9 +9,12 @@
   height: 100%;
   border-radius: 4px;
 }
-.priceContainer label,
+
 .releaseContainer label {
-  margin-right: 20px;
+  margin-right: 10px;
+}
+.priceContainer label {
+  margin-right: 5px;
 }
 .releaseContainer {
   margin-left: 30px;
