--- a/src/Shared/FileUploadButton/FileUploadButton.module.css
+++ b/src/Shared/FileUploadButton/FileUploadButton.module.css
@@ -1,3 +1,7 @@
+.fileUploadContainer {
+  width: 100%;
+  height: 100%;
+}
 .fileUploadField {
   display: none;
 }
@@ -14,6 +18,9 @@
   cursor: pointer;
   overflow: hidden;
   transition: background-color 0.2s ease;
+}
+.errorBorder {
+  border: 2px solid #cc2a24;
 }
 .fileUploadButton:disabled {
   cursor: default;
