--- a/src/Shared/TextField/TextField.module.css
+++ b/src/Shared/TextField/TextField.module.css
@@ -1,21 +1,32 @@
+.textFieldMainContainer {
+  width: 100%;
+  height: 100%;
+}
 .container {
   width: 100%;
   position: relative;
   background-color: rgba(255, 255, 255, 0.05);
-  height: 100%;
+  border: 2px solid transparent;
   border-radius: 4px;
   display: flex;
   align-items: center;
+  transition: border 0.2s ease;
   overflow: hidden;
+}
+.error {
+  border: 2px solid #cc2a24;
 }
 .label {
   width: 100%;
   position: absolute;
   left: 0px;
   padding: 0 10px;
+  font-weight: 400;
   pointer-events: none;
   color: rgb(173, 173, 173);
-  transition: top 200ms ease, font-size 0.2s ease, translate 200ms ease, color 0.2s ease;
+  user-select: none;
+  transition: top 200ms ease, font-size 0.2s ease, translate 200ms ease, color 0.2s ease,
+    font-weight 0.2s ease;
 }
 .inputLabel {
   top: 50%;
@@ -38,8 +49,13 @@
 .focused {
   top: 0%;
   translate: 0 5px;
+  font-weight: 600;
   font-size: 12px;
   color: rgb(140, 140, 140);
+}
+
+.focusBorder {
+  border: 2px solid rgba(1, 81, 185, 0.733);
 }
 
 .textarea {
