--- a/src/Shared/ButtonWaterEffect/ButtonWaterEffect.module.css
+++ b/src/Shared/ButtonWaterEffect/ButtonWaterEffect.module.css
@@ -5,14 +5,22 @@
   left: 0;
   top: 0;
   overflow: hidden;
+  user-select: none;
 }
+
 .waterDrop {
   position: absolute;
   display: inline-block;
   border-radius: 50%;
   opacity: 0.4;
   scale: 1;
-  animation: waterEffect 650ms cubic-bezier(0.4, 0, 0.2, 1) 1 forwards;
+  animation: waterEffect cubic-bezier(0.4, 0, 0.2, 1) 1 forwards;
+}
+.short {
+  animation-duration: 700ms;
+}
+.long {
+  animation-duration: 1500ms;
 }
 
 @keyframes waterEffect {
