--- a/src/Shared/SelectionField/SelectionField.module.css
+++ b/src/Shared/SelectionField/SelectionField.module.css
@@ -1,23 +1,30 @@
 .container {
   position: relative;
+}
+.button {
+  position: relative;
   width: 100%;
   height: 100%;
-  position: relative;
   background-color: rgba(255, 255, 255, 0.05);
   border-radius: 4px;
+  border: 2px solid transparent;
   cursor: pointer;
+  transition: border 200ms cubic-bezier(0, 0, 0.2, 1);
   font-size: 1rem;
 }
 .label {
   position: absolute;
   left: 10px;
-  top: 0;
+  top: 50%;
   scale: 1;
-  translate: 0 18px;
+  translate: 0 -50%;
   transform-origin: 0 0;
   pointer-events: none;
   color: rgb(173, 173, 173);
-  transition: scale 200ms cubic-bezier(0, 0, 0.2, 1), translate 200ms cubic-bezier(0, 0, 0.2, 1),
+  transition:
+    top 200ms cubic-bezier(0, 0, 0.2, 1),
+    scale 200ms cubic-bezier(0, 0, 0.2, 1),
+    translate 200ms cubic-bezier(0, 0, 0.2, 1),
     color 200ms cubic-bezier(0, 0, 0.2, 1);
 }
 .field {
@@ -30,9 +37,13 @@
 }
 
 .focused {
+  top: 0%;
   translate: 0 5px;
   scale: 0.75;
   color: rgb(140, 140, 140);
+}
+.focusBorder {
+  border: 2px solid rgba(1, 81, 185, 0.733);
 }
 
 .input {
