--- a/src/Shared/FileUploadButton/FileUploadButton.module.css
+++ b/src/Shared/FileUploadButton/FileUploadButton.module.css
@@ -9,10 +9,11 @@
 .fileUploadButton {
   width: 100%;
   height: 100%;
-  border: none;
+  border: 2px solid transparent;
   padding: 20px 40px 20px 10px;
   text-align: left;
   position: relative;
+  font-size: 1rem;
   background-color: rgba(255, 255, 255, 0.05);
   border-radius: 4px;
   cursor: pointer;
@@ -50,7 +51,6 @@
 }
 
 .label {
-  width: 100%;
   position: absolute;
   left: 10px;
   top: 0;
