--- a/src/Shared/ErrorMessage/ErrorMessage.module.css
+++ b/src/Shared/ErrorMessage/ErrorMessage.module.css
@@ -1,15 +1,14 @@
 #hide {
-  height: 0px;
+  animation: hide 200ms linear forwards 1;
 }
 #show {
-  height: 31px;
+  animation: show 200ms linear forwards 1;
 }
 .ErrorMessageContainer {
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: height 200ms linear;
   cursor: default;
   user-select: none;
   overflow: hidden;
@@ -30,4 +29,20 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+@keyframes show {
+  0% {
+    height: 0;
+  }
+  100% {
+    height: 31px;
+  }
+}
+@keyframes hide {
+  0% {
+    height: 31px;
+  }
+  100% {
+    height: 0;
+  }
 }
