--- a/src/Shared/FilterOption/FilterSwitch/FilterSwitch.module.css
+++ b/src/Shared/FilterOption/FilterSwitch/FilterSwitch.module.css
@@ -20,10 +20,12 @@
   width: 100%;
   position: absolute;
   left: 0;
+  top: 0;
 }
 .activePathContainer {
   position: absolute;
-  top: 0;
+  top: 50%;
+  translate: 0 -50%;
   left: 0;
   border-radius: 15px;
   overflow: hidden;
@@ -44,6 +46,7 @@
   height: 18px;
   position: absolute;
   left: -9px;
+  top: 0;
   border-radius: 50%;
   box-shadow: 0 0 1px 0px rgba(255, 255, 255, 0.8);
   scale: 1.2;
