--- a/src/Pages/MainContent/Pages/IndividualGame/Components/IndividualGameDetails/Components/IndividualGameDescription/IndividualGameTextDescription/IndividualGameTextDescription.module.css
+++ b/src/Pages/MainContent/Pages/IndividualGame/Components/IndividualGameDetails/Components/IndividualGameDescription/IndividualGameTextDescription/IndividualGameTextDescription.module.css
@@ -10,7 +10,9 @@
   margin-top: 30px;
   margin-bottom: 20px;
 }
-
+.descriptionContainer {
+  margin-bottom: 20px;
+}
 .mainHeader {
   font-size: inherit;
   font-weight: normal;
@@ -27,7 +29,7 @@
 .description {
   font-size: inherit;
   display: inline-block;
-  margin-bottom: 20px;
+
   color: rgba(255, 255, 255, 0.6);
 }
 
@@ -67,7 +69,9 @@
   width: 100%;
   background: linear-gradient(#12121200, #121212);
   opacity: 1;
-  transition: opacity 300ms, top 300ms;
+  transition:
+    opacity 300ms,
+    top 300ms;
   z-index: 1;
 }
 
@@ -78,6 +82,8 @@
   width: 100%;
   background: linear-gradient(#12121200, #121212);
   opacity: 0;
-  transition: opacity 3000ms, top 3000ms;
+  transition:
+    opacity 3000ms,
+    top 3000ms;
   z-index: 1;
 }
