add game specification validation 80%

--- a/src/Pages/AddGame/Components/AddGameSpecifications/Components/SectionFieldContainer/SectionFieldContainer.module.css
+++ b/src/Pages/AddGame/Components/AddGameSpecifications/Components/SectionFieldContainer/SectionFieldContainer.module.css
@@ -15,4 +15,10 @@
   .selectionField {
     width: 100px;
   }
+  .specsContainer {
+    flex-direction: column;
+  }
+  .selectionField {
+    margin-bottom: 10px;
+  }
 }
