add game specification validation 90%

--- a/src/Shared/SelectionField/SelectionField.module.css
+++ b/src/Shared/SelectionField/SelectionField.module.css
@@ -47,6 +47,8 @@
   color: rgb(173, 173, 173);
   border: none;
   pointer-events: none;
+  padding-right: 30px;
+  text-overflow: ellipsis;
 }
 
 .focused {
