--- a/src/Shared/SelectionField/SelectionField.module.css
+++ b/src/Shared/SelectionField/SelectionField.module.css
@@ -68,7 +68,7 @@
 .list {
   position: absolute;
   width: 100%;
-  top: calc(100% + 1px);
+  top: 100%;
   border-radius: 4px;
   padding: 0px 10px 10px 10px;
   background-color: rgb(37, 37, 37);
